# raudio2

./: .clang-format  CHANGELOG.txt  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml
archive/gzip/: CMakeLists.txt
archive/gzip/src/: raudio2_gzip.cpp  raudio2_gzip.h
archive/libarchive/: CMakeLists.txt
archive/libarchive/src/: raudio2_libarchive.cpp  raudio2_libarchive.h
cmake/: raudio2Config.cmake.in
docs/: archive-plugin.md  input-plugin.md  readme.md
examples/: raudio2_load_music.c  raudio2_load_music_cpp.cpp
extras/: raudio2.pc.in
include/raudio2/: raudio2.h  raudio2.hpp  raudio2_archive.h  raudio2_archive.hpp  raudio2_archiveplugin.h  raudio2_archiveplugin.hpp  raudio2_audiodevice.hpp  raudio2_audiostream.hpp  raudio2_common.h  raudio2_common.hpp  raudio2_config.h  raudio2_inputplugin.h  raudio2_inputplugin.hpp  raudio2_music.hpp  raudio2_value.h  raudio2_value.hpp  raudio2_virtualio.h  raudio2_virtualio.hpp  raudio2_waveinfo.h  raudio2_waveinfo.hpp
input/drflac/: CMakeLists.txt
input/drflac/src/: raudio2_drflac.cpp  raudio2_drflac.h
input/drmp3/: CMakeLists.txt
input/drmp3/src/: raudio2_drmp3.cpp  raudio2_drmp3.h
input/flac/: CMakeLists.txt
input/flac/src/: raudio2_flac.cpp  raudio2_flac.h
input/gme/: CMakeLists.txt
input/gme/src/: raudio2_gme.cpp  raudio2_gme.h
input/modplug/: CMakeLists.txt
input/modplug/cmake/: Findmodplug.cmake
input/modplug/src/: raudio2_modplug.cpp  raudio2_modplug.h
input/mpg123/: CMakeLists.txt
input/mpg123/src/: raudio2_mpg123.cpp  raudio2_mpg123.h
input/openmpt/: CMakeLists.txt
input/openmpt/src/: raudio2_openmpt.cpp  raudio2_openmpt.h
input/opus/: CMakeLists.txt
input/opus/src/: raudio2_opus.cpp  raudio2_opus.h
input/sndfile/: CMakeLists.txt
input/sndfile/src/: raudio2_sndfile.cpp  raudio2_sndfile.h
input/stbvorbis/: CMakeLists.txt
input/stbvorbis/src/: raudio2_stbvorbis.cpp  raudio2_stbvorbis.h
input/vorbis/: CMakeLists.txt
input/vorbis/src/: raudio2_vorbis.cpp  raudio2_vorbis.h
input/wav/: CMakeLists.txt
input/wav/src/: raudio2_wav.cpp  raudio2_wav.h
src/: ArchivePluginIO.cpp  ArchivePluginIO.h  AudioBuffer.cpp  AudioBuffer.h  AudioData.h  AudioDevice.cpp  AudioDevice.h  AudioProcessor.h  AudioStream.cpp  AudioStream.h  FileIO.cpp  FileIO.h  MemoryDataIO.cpp  MemoryDataIO.h  MemoryIO.cpp  MemoryIO.h  Music.cpp  Music.h  SampleFormat.h  Utils.cpp  Utils.h  VirtualIO.cpp  VirtualIO.h  raudio2.cpp
vcpkg/ports/libgme/: disable-static-zlib-hack.patch  portfile.cmake
vcpkg/ports/mpg123/: fix-m1-build.patch  fix-modulejack.patch  portfile.cmake  vcpkg.json
vcpkg/ports/raudio2/: portfile.cmake  usage  vcpkg.json
